# data_modelling

./: README.md  pyproject.toml
data_inspection/: current_price.py  one_hour_price.py  scratch.py
models/base/: _base.yml  base_pricing__prices.sql  base_pricing__rules.sql
models/mart/: _mart.yml  current_price_by_weekday_loc_dur.sql  historical_1hr_prices_by_loc.sql
