[tool.poetry]
name = "data-modelling"
version = "0.1.0"
description = "A task I was asked to complete. I am sharing it to showcase my data modelling skills."
authors = ["Daniel Abu <99013608+dan-abu@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dbt-core = "^1.8.5"
dbt-duckdb = "^1.8.3"
duckdb = "^1.0.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
